--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -200,7 +200,7 @@ const { title, description, publishDate, updatedDate, tags } = post.data;
     outline-offset: var(--outline-offset);
   }
 
-  @media (max-width: 640px) {
+  @container page (max-width: 640px) {
     .post-nav {
       grid-template-columns: 1fr;
     }
