--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -69,7 +69,7 @@ const {
     <!-- View Transitions for smooth page navigation -->
     <ClientRouter />
   </head>
-  <body class={`theme-${theme}`}>
+  <body class={`theme-${theme} @container/page`}>
     <script is:inline>
       (function () {
         var THEME_KEY = 'theme';
