--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -100,7 +100,7 @@
 
 .prose :where(.heading-anchor):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
   position: absolute;
-  left: calc(-1 * var(--space-5));
+  left: calc(-1 * 1.5ch);
   font-weight: var(--font-regular);
   color: var(--muted);
   opacity: 0;
@@ -109,8 +109,13 @@
 }
 
 .prose :where(h2:hover .heading-anchor, h3:hover .heading-anchor, h4:hover .heading-anchor, h5:hover .heading-anchor, h6:hover .heading-anchor):not(:where([class~="not-prose"], [class~="not-prose"] *)),
-.prose :where(.heading-anchor:focus):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+.prose :where(.heading-anchor:focus-visible):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
   opacity: 1;
+}
+
+.prose :where(.heading-anchor:focus-visible):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+  outline: var(--outline-width) solid var(--fg);
+  outline-offset: var(--outline-offset-tight);
 }
 
 .prose :where(.heading-anchor:hover):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
@@ -140,6 +145,11 @@
 .prose :where(a):not(:where([class~="not-prose"], [class~="not-prose"] *)):not(.heading-anchor):hover {
   border-color: var(--emphasis);
   padding-bottom: var(--space-05);
+}
+
+.prose :where(a):not(:where([class~="not-prose"], [class~="not-prose"] *)):not(.heading-anchor):focus-visible {
+  outline: var(--outline-width) solid var(--fg);
+  outline-offset: var(--outline-offset-tight);
 }
 
 /* Inline code (not in pre blocks - those are styled in shiki.css) */
