--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -184,6 +184,10 @@ const { title, description, publishDate, updatedDate, tags } = post.data;
   }
 
   .post-nav-link {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
     font-size: var(--text-md);
     font-weight: var(--font-medium);
     line-height: var(--leading-24);
