--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -42,12 +42,12 @@ const {
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/svg+xml" href="/sf-steel.svg" data-favicon />
+    <link rel="icon" type="image/x-icon" href="/sf-steel.ico" data-favicon />
     <script is:inline>
       (function() {
         var theme = localStorage.getItem('theme') || 'steel';
         var favicon = document.querySelector('link[data-favicon]');
-        if (favicon) favicon.href = '/sf-' + theme + '.svg';
+        if (favicon) favicon.href = '/sf-' + theme + '.ico';
       })();
     </script>
     <meta name="generator" content={Astro.generator} />
@@ -89,7 +89,7 @@ const {
             document.documentElement.classList.add('theme-' + saved);
             // Update favicon to match theme
             var favicon = document.querySelector('link[data-favicon]');
-            if (favicon) favicon.href = '/sf-' + saved + '.svg';
+            if (favicon) favicon.href = '/sf-' + saved + '.ico';
           }
         }
 
