--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -26,6 +26,7 @@ const { title, description, publishDate, updatedDate, tags } = post.data;
 <Base
   title={`${title} | Sam Folorunsho`}
   description={description}
+  ogImage={`/og/blog/${post.id}.png`}
   ogType="article"
   publishDate={publishDate}
   updatedDate={updatedDate}
